--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        //Import ArCore plugin path
+        classpath 'com.google.ar.sceneform:plugin:1.15.0'
     }
 }
 
