"* Added compile options to support Java 8. * Added script in build.gradle to build required files in res/raw from models "obj" file. at compile time"

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 }
 
 dependencies {
@@ -40,3 +46,8 @@ dependencies {
     //ArCore sceneform dependency
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.15.0'
 }
+
+sceneform.asset('sampledata/models/model.obj',
+        'default',
+        'sampledata/models/model.sfa',
+        'src/main/res/raw/model')
